--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,4 @@
-#root{
+.usuarios{
     margin:0;
     padding:0;
     height: 100%;
@@ -6,9 +6,11 @@
     background: linear-gradient(0deg, rgba(1,131,199,1) 0%, rgba(0,201,242,1) 100%, rgba(9,9,121,1) 100%);
 
 }
-.usuarios{
+.usuarios,.home-page{
     width: 100vw;
     height: 100vh;
+}
+.usuarios{
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -26,7 +28,6 @@
     height: 350px;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
-
 .titulo {
     margin:2%;
     font-weight: bolder;
@@ -52,10 +53,56 @@
     flex-direction: row;
     justify-content: flex-end;
 }
-
 .login{
     height: 300px;
 }
+/* home */
+.home-page{
+    width:100%;
+    display: flex;
+    flex-direction: column;
+}
+.navegador-home{
+    width: 100%;
+    height: 50px;
+    background-color: rgba(251, 251, 253, .8);
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+}
+.navegador-home img{
+    background-color: black;
+    width: 30px;
+    height: 30px;
+    border-radius: 100%;
+}
+.contenedor-home{
+    margin-top: 10px;
+    background-color: rgba(231, 222, 222, 0.247);
+    width:100%;
+    align-self:center;
+}
+.inicio-home{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.inicio-home *{
+    margin-top: 20px;
+}
+.inicio-home *:nth-child(2){
+    width: 70%;
+}
+.imagen-inicio{
+    width: 200px;
+    height: 200px;
+    border-radius: 100%;
+    background-color: black;
+}
+.carousel-1{
+    margin-top: 20px;
+}
+
 
 
 @media screen and (max-width: 576px) {
