--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,7 @@
 body{
     background-color: white;
 }
+/*login register */
 .usuarios{
     margin:0;
     padding:0;
@@ -65,51 +66,178 @@ body{
     display: flex;
     flex-direction: column;
 }
+/*Navegador*/
 .navegador-home{
     width: 100%;
     height: 50px;
-    background-color: rgba(251, 251, 253, .8);
+    position: fixed;
+}
+.navegador-home .inside-nav{
+    width: 100%;
+    height: 100%;
+    background-color: rgba(255, 255, 255, 0.950);
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
+    align-items: center;
 }
-.navegador-home img{
+.navegador-home .inside-nav *:nth-child(8){
+    color:black;
+}
+.navegador-home .inside-nav img{
     background-color: black;
     width: 30px;
     height: 30px;
     border-radius: 100%;
 }
+.navegador-home .inside-nav a{
+    color:black;
+    text-decoration: none;
+    font-size: 11px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    
+}
+/*Navegador resposive*/
+.navegador-home .sidebar{
+    position: fixed;
+    top:0;
+    right: 0;
+    height: 100vh;
+    width: 250px;
+    z-index:999;
+    background-color: rgba(255, 255, 255, 0.2);
+    backdrop-filter: blur(10px);
+    box-shadow: -10px 0 10px rgba(0,0,0,0.1);
+    display: none;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    text-align: center;
+    font-size: 11px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+.sidebar *{
+    width: 100%;
+    margin-top: 15px;
+    text-decoration: none;
+    color:black;
+}
+.menu-button{
+    display: none;
+}
 .contenedor-home{
-    margin-top: 10px;
-    background-color: rgba(231, 222, 222, 0.247);
     width:100%;
     align-self:center;
 }
+/*Contenedor home*/
 .inicio-home{
+    color:white;
+    background: rgb(1,131,199);
+    background: linear-gradient(0deg, rgba(1,131,199,1) 0%, rgba(0,201,242,1) 100%, rgba(9,9,121,1) 100%);
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
-.inicio-home *{
-    margin-top: 20px;
+.inicio-home .imagen-inicio{
+    margin-top: 100px;
 }
-.inicio-home *:nth-child(2){
+.inicio-home div{
+    margin: 30px;
     width: 70%;
+    height: 100px;
+    color: black;
+    
 }
+.inicio-buscador{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+.search-bar{
+    width: 60%;
+}
+.search-bar input{
+    width: 80%;
+    outline:none;
+    border: 1px solid rgba(120, 120, 120, 0.133);
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
+    border-right: 0;
+    padding-left: 20px;
+}
+.search-bar button{
+   cursor: pointer;
+   width: 20%;
+   border: 1px solid rgba(120, 120, 120, 0.133);
+   border-top-right-radius:10px ;
+   border-bottom-right-radius: 10px;
+}
+.search-bar button:hover{
+    background:rgb(110, 110, 110);
+}
+
 .imagen-inicio{
     width: 200px;
     height: 200px;
     border-radius: 100%; 
     background-color: black;
 }
-.carousel-1{
+/* Ventas*/
+.ventas{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    background-color: white;
+}
+.ventas div{
+    width: 100%;
+    height: 50%;
+    margin: 10px;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+.ventas div *{
     margin-top: 20px;
 }
+.ventas div h2{
+    color:black;
+}
+.ventas div p{
+    
+    width: 80%;
+}
 
+/* Carousel*/
+.carousel-1{
+    margin-top: 20px;
+    
+}
 
-
-@media screen and (max-width: 576px) {
-    .container{
-        margin: 5%;
+@media screen and (max-width: 768px) {
+   
+    .hideOnMovile{
+        display:none;
     }
-  }
+    .menu-button{
+        display: block;
+    }
+    .logout{
+        width: 50%;
+        
+    }
+    .search-bar input{
+        width: 100%;
+        border-radius: 10px;
+    }
+    .boton {
+        visibility: hidden;
+    }
+     
+}
+
